Add CI, docs and a working release path; bump to 5.0.0-SNAPSHOT
The project had no working release path at all. distributionManagement pointed
at oss.sonatype.org and used nexus-staging-maven-plugin, but OSSRH was sunset
and that host now returns 404, so 5.0.0 could not have been published.
Replaced with central-publishing-maven-plugin against the Central Publisher
Portal. Also dropped the stale <tag>cassandra-unit-parent-3.3.0.0</tag> left
behind in the scm block.

Version becomes 5.0.0-SNAPSHOT, tracking the embedded Cassandra major rather
than the driver version, and signalling the deliberate compatibility break.

Added GitHub Actions CI - there was none before, despite Dependabot PRs
sitting unreviewed. It runs `mvn verify` on JDK 17 and uploads surefire
reports on failure. Dependabot is configured to leave cassandra-all and
cassandra-parent alone: those upgrades change which JDKs work and can
invalidate cu-cassandra.yaml, so they are not bot work.

JDK 17 is now the only supported version, narrowed from the [11,18) the
enforcer allowed a moment ago. That range was wrong: maven.compiler.release
is 17, so a JDK 11 build fails with "release version 17 not supported", and
spring-test 6.2 requires 17 regardless. Supporting 11 would mean different
bytecode levels per module for no practical gain. Verified by running the
build on JDK 11 and watching it fail, then on 17 and watching it pass.

README rewritten. It had been advertising XML/JSON/YAML datasets, which have
not been loadable for years, and pointing at a wiki that issue #231 says is
stale. It now leads with the JDK requirement and the surefire argLine, which
is mandatory rather than optional - without those flags an embedded Cassandra
5.0 cannot start, and the only symptom is surefire's "forked VM terminated
without properly saying goodbye". It also documents the one-Cassandra-per-JVM
invariant, the dataset-driven cleanup contract, and points at Testcontainers
for anybody who would rather not pay the in-proce